# clmalloc

./: ARCHITECTURE.md  Cargo.toml  README.md
.config/tracey/: config.styx
.cursor/: mcp.json
.cursor/rules/: comments.mdc  tracey_specs.mdc
benches/: README.md  alloc_setup.rs  bench_stats.rs  cache_scratch.rs  fragmentation.rs  larson.rs  rss.rs  tokio_worksteal.rs
specs/: alloc.md  heap.md  metrics.md  page-pool.md  pprof.md  size-class.md  slab.md
src/: global.rs  heap.rs  lib.rs  metrics.rs  pool.rs  pprof.rs  size_class.rs  slab.rs  sync.rs  sys.rs
tests/: global_alloc.rs  pprof_reentrant.rs
