[package]
name = "clmalloc"
version = "0.1.0"
edition = "2024"

[features]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
mimalloc = { version = "0.1.48", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
tikv-jemallocator = { version = "0.6.1", optional = true }

[[bench]]
name = "larson"
harness = false

[[bench]]
name = "cache_scratch"
harness = false

[[bench]]
name = "tokio_worksteal"
harness = false

[dev-dependencies]
rand = "0.10.0"
rand_xoshiro = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
