[package]
name = "clmalloc"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
clmalloc = []
metrics = []
pprof = ["dep:backtrace", "dep:flate2", "dep:rand"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
backtrace = { version = "0.3", optional = true }
flate2 = { version = "1", optional = true }
libc = "0.2"
rand = { version = "0.10", optional = true, default-features = false, features = ["alloc"] }
mimalloc = { version = "0.1.48", optional = true }
snmalloc-rs = { version = "0.3.8", optional = true }
spin = { version = "0.10", default-features = false, features = ["spin_mutex", "once"] }
tikv-jemallocator = { version = "0.6.1", optional = true }

[[bench]]
name = "larson"
harness = false

[[bench]]
name = "cache_scratch"
harness = false

[[bench]]
name = "tokio_worksteal"
harness = false

[dev-dependencies]
loom = "0.7"
rand = "0.10.0"
rand_xoshiro = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
